--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-#logo {
-    width: 20%;
+#header {
+    width: 100%;
 
+
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
 }
 
 #homepicture {
@@ -13,3 +21,14 @@
 nav {
     background-color: #E6E8EA;
 }
+
+/**
+#homeBody {
+    background-image: url('images/home_page.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+*/
+
+
+
